Issue #89 - get compilation working with Java 17